# mlops-kubernetes

./: .gitignore  Dockerfile  README.md  dataflow.py  debug_postgres.yaml  deployment.yaml  docker-compose.yml  example_model.yaml  example_workflow.webm  experiment.yaml  metaflow_dataflow_pod.yaml  metaflow_modelflow_pod.yaml  minio.tf  minio.yaml  model.yaml  modelflow.py  postgres.tf  providers.tf  pyproject.toml  seldon.tf
app/: dataflow.py  modelflow.py  readme_diagrams.py  sample_requests.py
app/feast/: feature_store.yaml  feature_view.py
debugging/: python_container.yaml
feast/: feature_store.yaml
