[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["wmaucla <zhengweima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.3"
scikit-learn = "^1.4.0"
metaflow = "^2.10.3"
mlflow = "^2.7.1"
psycopg2 = "^2.9.9"
feast = {extras = ["postgres"], version = ">=0.36,<0.38"}
diagrams = "^0.23.4"

[tool.poetry.group.dev.dependencies]
black = ">=23.10,<25.0"
ruff = ">=0.5.1,<0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",     # pycodestyle
    "F",     # pyflakes
    "I",     # isort
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    # flake8-bandit
    "S102",
    "S110",
    "S112",
    "S301",
    "S324",
    "S501",
    "S506",
    # pylint refactor
    "PLR5501",
    # pylint error
    "PLE1142",
    # pylint convention
    "PLC1901",
    "C901",
    "SIM108",
    "SIM110",
    "SIM115",
    ## docstrings
    "D300",
    "D402",
    "D417",
    "D418",
    "D419",
]
ignore = ["A003"] #, "DTZ005", "DTZ011"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
# Allow ruff to use unstable rules and fixes
preview = true

unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = []

# Same as Black.
line-length = 120


[tool.ruff.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

